fixing alignment restaurant homepage and extreme value

--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,7 @@ template {
 
 body {
   margin: auto;
+  min-width: 200px;
 }
 
 body, button, form, p {
@@ -387,12 +388,12 @@ li {
   margin: auto;
 }
 
-.flex-start {
-  justify-self: flex-start;
+.self-start {
+  justify-self: start;
 }
 
-.flex-end {
-  justify-self: flex-end;
+.self-end {
+  justify-self: end;
 }
 
 /* buttons */
@@ -405,12 +406,19 @@ li {
   background: linear-gradient(175deg, #FF79DA, #9356DC);
   border: none;
   box-shadow: 0px 2px 7px 2px #ccc;
+  text-align: center;
+}
+@media (max-width: 250px) {
+  .btn-cta {
+    margin: 30px 20px 40px 20px;
+  }
 }
 .btn-cta:hover {
   opacity: 0.9;
   box-shadow: 0px 2px 7px 2px #999;
 }
 
+/* animation - button heart */
 @keyframes heart-filling {
   0% {
     transform: scale(0);
@@ -512,7 +520,7 @@ footer i {
   width: 200px;
   height: 40px;
   position: absolute;
-  bottom: calc(50% - 40px);
+  bottom: calc(50% - 20px);
   right: calc(50% - 100px);
   display: flex;
   flex-flow: row nowrap;
@@ -642,7 +650,7 @@ header img {
     justify-items: center;
   }
   .functioning h2 {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1;
     justify-self: flex-start;
   }
@@ -699,7 +707,6 @@ header img {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  white-space: nowrap;
 }
 .functioning-element .number {
   border-radius: 100%;
@@ -711,7 +718,7 @@ header img {
 }
 .functioning-element i {
   color: #7d7d7d;
-  padding: 0px 25px;
+  padding: 0px 20px;
 }
 .functioning-element h3 {
   font-weight: 400;
@@ -729,12 +736,16 @@ header img {
 .restaurants {
   padding: 40px 25px;
   background-color: #f6f6f6;
-  margin: auto;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, auto);
   gap: 30px;
+  justify-items: start;
+  align-items: start;
+}
+.restaurants h2 {
+  max-width: 1300px;
 }
 @media (min-width: 650px) {
   .restaurants {
@@ -746,13 +757,14 @@ header img {
     grid-area: section-title;
     margin-bottom: 0;
     width: 100%;
+    margin: auto;
   }
 }
 
 .restaurants-card {
   height: 300px;
   width: 100%;
-  min-width: 250px;
+  min-width: 150px;
   max-width: 637.5px;
   border-radius: 20px;
   display: flex;
@@ -760,6 +772,7 @@ header img {
   background-color: white;
   border-radius: 20px;
   box-shadow: 2px 2px 10px 0px #ddd;
+  overflow: hidden;
 }
 .restaurants-card a {
   height: 75%;
@@ -805,9 +818,17 @@ header img {
   align-items: center;
   height: 25%;
 }
+.restaurants-card-text > a {
+  overflow: hidden;
+}
 .restaurants-card-text .restaurants-card-title {
   line-height: 24px;
   padding-left: 15px;
+}
+.restaurants-card-text h3, .restaurants-card-text h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .restaurants-card-text h3 {
   font-size: 20px;
