--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,12 +9,17 @@
     background: linear-gradient(175deg, $secondary-color, $primary-color);
     border: none;
     box-shadow: 0px 2px 7px 2px #ccc;
+    text-align: center;
+    @media (max-width: $xs-screen) {
+        margin: 30px 20px 40px 20px;
+    }
     &:hover {
         opacity: 0.9;
         box-shadow: 0px 2px 7px 2px #999;
     }
 }
 
+/* animation - button heart */
 
 @keyframes heart-filling {
     0% {
