--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -49,7 +49,7 @@
   width: 200px;
   height: 40px;
   position: absolute;
-  bottom: calc(50% - 40px);
+  bottom: calc(50% - 20px);
   right: calc(50% - 100px);
   display: flex;
   flex-flow: row nowrap;
@@ -149,7 +149,7 @@ header {
     grid-template-rows: repeat(3, auto);
     justify-items: center;
     h2 {
-      grid-column: 1 / 2;
+      grid-column: 1 / 3;
       grid-row: 1;
       justify-self: flex-start;
     }
@@ -201,7 +201,6 @@ header {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  white-space: nowrap;
   .number {
     border-radius: 100%;
     border: 1px solid $primary-color;
@@ -212,7 +211,7 @@ header {
   }
   i {
     color: $font-light;
-    padding: 0px 25px;
+    padding: 0px 20px;
   }
   h3 {
     font-weight: 400;
@@ -232,12 +231,16 @@ header {
 .restaurants {
   padding: $my-container $mx-container;
   background-color: $background-color-light;
-  margin: auto;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, auto);
   gap: $gap-homepage;
+  justify-items: start;
+  align-items: start;
+  h2 {
+    max-width: $max-width-container;
+  }
   @media (min-width: $m-screen) {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, auto);
@@ -249,6 +252,7 @@ header {
       grid-area: section-title;
       margin-bottom: 0;
       width: 100%;
+      margin: auto;
     }
   }
 }
@@ -256,7 +260,7 @@ header {
 .restaurants-card {
   height: 300px;
   width: 100%;
-  min-width: 250px;
+  min-width: 150px;
   max-width: calc($max-width-container / 2 - $mx-container / 2);
   border-radius: 20px;
   display: flex;
@@ -264,6 +268,7 @@ header {
   background-color: white;
   border-radius: 20px;
   box-shadow: 2px 2px 10px 0px #ddd;
+  overflow: hidden;
   a {
     height: 75%;
     width: 100%;
@@ -306,9 +311,17 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 25%;
+  & > a {
+    overflow: hidden;
+  }
   .restaurants-card-title {
     line-height: 24px;
     padding-left: 15px;
+  }
+  h3, h4 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
   h3 {
     font-size: 20px;
