--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -18,6 +18,7 @@ $font-text: 'Roboto', sans-serif;
 $xl-screen: 992px; /* desktop */
 $l-screen: 769px; /* small screen */
 $m-screen: 650px; /* tablet */
+$xs-screen: 250px; 
 
 /* container */
 $max-width-container: 1300px;
